--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -9,7 +9,7 @@
 }
 
 @layer base {
-  :root {
+  .dark {
     --background: 0 0% 100%;
     --foreground: 20 14.3% 4.1%;
     --card: 0 0% 100%;
@@ -37,7 +37,7 @@
     --chart-5: 27 87% 67%;
   }
 
-  .dark {
+  :root {
     --background: 20 14.3% 4.1%;
     --foreground: 60 9.1% 97.8%;
     --card: 20 14.3% 4.1%;
@@ -57,6 +57,7 @@
     --border: 12 6.5% 15.1%;
     --input: 12 6.5% 15.1%;
     --ring: 35.5 91.7% 32.9%;
+    --radius: 0.5rem;
     --chart-1: 220 70% 50%;
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
