added token based authentication

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -74,3 +74,12 @@
     @apply bg-background text-foreground;
   }
 }
+
+body::-webkit-scrollbar {
+  width: 6px;
+}
+
+body::-webkit-scrollbar-thumb {
+  background: orange;
+  border-radius: 15px;
+}
